...
                      style={styles.input}
                      placeholder={t("login.username")}
                      placeholderTextColor="#9e9b97"
                      value={values.username.normalize("NFC")}
                      onChangeText={handleChange("username")}
                      onBlur={handleBlur("username")}
                      testID="login_email_input"
                    />
                    {errors.username && touched.username && (
                      <TextComponent type="mediumText" style={styles.error}>
                        {errors.username}
                      </TextComponent>
                    )}
...
                        placeholder={t("login.password")}
                        placeholderTextColor="#9e9b97"
                        secureTextEntry={!showPassword}
                        value={values.password.normalize("NFC")}
                        onChangeText={handleChange("password")}
                        onBlur={handleBlur("password")}
                        testID="login_password_input"
                      />

                      <TouchableOpacity
                        onPress={() => setShowPassword(!showPassword)}
                      >
                        <Icon
...
                      onPress={handleSubmit}
                      disabled={loading}
                      style={styles.button}
                      textStyle={styles.buttonText}
                      showGlobalLoader={true}
                    />
                    <LoadingOverlay visible={loading} text="Signing in..." />
                    <View style={styles.footerContainer}>
                      <TextComponent type="cardText" style={styles.footer}>
                        {t("login.footer")}{" "}
                      </TextComponent>
                      <TouchableOpacity
                        onPress={() => navigation.navigate("Signup")}
...
