...
              {t("drawer.logout")}
            </TextComponent>
          </TouchableOpacity>
        ) : (
          // LOGIN
          <TouchableOpacity
            testID="drawer_login_btn"
            accessibilityLabel="drawer_login_btn"
            style={{
              flexDirection: "row",
              alignItems: "center",
              paddingVertical: 10,
            }}
...
